--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,300;0,400;0,500;0,600;0,700;1,500&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +13,7 @@
 }
 
 body {
-  font-family: "Faktum Semibold", sans-serif;
+  font-family: "EXO 2", sans-serif;
 }
 
 .row {
@@ -24,17 +26,6 @@ body {
 .col-6 {
   width: 50%;
   padding: 0 15px;
-}
-
-.box {
-  margin: 10px 00 0;
-  width: 100%;
-  padding: 24px;
-  background-color: rgba(255, 255, 255, 0.05);
-  border-radius: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .col-3 {
