--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -86,7 +86,6 @@
 }
 
 .header__peopleCount {
-  width: 100px;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -95,12 +94,13 @@
 }
 
 .header__peopleCount img {
-  width: 20px;
+  width: 19px;
   border-radius: 40%;
 }
 
 .header__peopleCount p {
   margin-left: 5px;
+  font-size: 14px;
 }
 
 .peopleCount__wrap {
