--- a/src/components/ChatSidebar/ChatSidebar.module.css
+++ b/src/components/ChatSidebar/ChatSidebar.module.css
@@ -1,7 +1,6 @@
 .app {
   display: flex;
   flex-direction: column;
-  max-height: 100vh;
   min-height: 100vh;
   width: 100px;
   background-color: rgb(22, 22, 22);
@@ -97,4 +96,8 @@
 .direct__wrap svg {
   width: 24px;
   height: 24px;
+}
+
+.Link svg {
+  color: rgb(179, 0, 255);
 }
