--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,7 +1,7 @@
 .app {
   display: flex;
   flex-direction: column;
-  max-height: 100vh;
+
   min-height: 100vh;
   width: 300px;
   background-color: rgb(22, 22, 22);
@@ -9,8 +9,9 @@
   height: 100%;
 }
 
-
 .Link {
+  display: flex;
+  align-items: center;
   gap: 10px;
   transition: 0.3s ease-in-out;
   color: white;
@@ -99,4 +100,13 @@
 .direct__wrap svg {
   width: 24px;
   height: 24px;
+}
+
+.Link svg {
+  color: #868383;
+  transition: all 0.3s ease 0s;
+}
+
+.nav__wrap p {
+  color: #868383;
 }
