--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,300;0,400;0,500;0,600;0,700;1,500&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,900;1,300;1,400;1,700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -13,7 +12,7 @@
 }
 
 body {
-  font-family: "EXO 2", sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .row {
@@ -40,4 +39,11 @@ body {
 
 .main__part {
   width: 100%;
+}
+
+@media (max-width: 745px) {
+  .container {
+    max-width: 84%;
+    margin: 0 auto;
+  }
 }
