--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -108,18 +108,21 @@
   border-radius: 1rem 1rem 0 0;
   width: 206px;
 }
+
 .abotus__pages__text {
   background-color: rgba(255, 255, 255, 0.05);
   border-radius: 0 0 1rem 1rem;
   width: 206px;
 }
+
 .aboutus__pages h2 {
   color: #fff;
   margin: 70px 0 20px 0;
 }
 
 .aboutus__pages__photo img {
-  width: 206px;
+  max-width: 100%;
+  height: auto;
   border-radius: 20px;
 }
 
@@ -128,4 +131,22 @@
   padding: 1.25rem 1rem;
   font-size: 14px;
   text-align: center;
+}
+
+@media (max-width: 1210px) {
+  .secondClass {
+    width: 33.3333%;
+  }
+}
+
+@media (max-width: 980px) {
+  .secondClass {
+    width: 50%;
+  }
+}
+
+@media (max-width: 745px) {
+  .secondClass {
+    width: 100%;
+  }
 }
