--- a/src/components/General/General.module.css
+++ b/src/components/General/General.module.css
@@ -1,6 +1,10 @@
-.main__wrap {
+.wrap {
   display: flex;
   width: 100%;
+}
+.main__wrap {
+  display: flex;
+  flex-direction: column;
 }
 
 .content__wrap {
@@ -70,6 +74,7 @@
   justify-content: space-between;
   gap: 10px;
   border-bottom: 1px solid rgb(41, 41, 41);
+  align-items: center;
 }
 .row {
   display: flex;
@@ -118,6 +123,7 @@
 }
 
 .avatar {
+  margin: 0 20px 0 20px;
   display: flex;
   align-items: center;
   z-index: 20;
@@ -448,4 +454,123 @@
 
 .emoji__choose svg {
   width: 10px;
+}
+
+@media (max-width: 450px) {
+  .name__profile {
+    display: none;
+  }
+}
+
+@media (max-width: 720px) {
+  .chat__area {
+    height: calc(100vh - 324px);
+  }
+  .chat__footer {
+    display: none;
+  }
+  .comments__wrap {
+    width: 100%;
+  }
+  .comments__button1 {
+    padding: 0;
+    width: auto;
+    height: auto;
+  }
+  .peopleCount__wrap p {
+    display: none;
+  }
+  .header__p {
+    margin-left: 0;
+  }
+  .header {
+    gap: 0;
+  }
+  .avatar {
+    margin: 0 10 0 0;
+    width: 50px;
+  }
+  .header__p {
+    width: 70px;
+  }
+}
+
+
+.general__burger {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #333;
+}
+
+.general__burger {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  width: 60px;
+  height: 50px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.general__burger span {
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+}
+
+.menu {
+  position: fixed;
+  top: 90px;
+  left: -100%;
+  width: 50%;
+  height: calc(100vh - 200px);
+  background-color: rgb(
+    47,
+    47,
+    47
+  );
+  transition: left 0.3s ease;
+  display: flex;
+  flex-direction: column;
+}
+
+.open {
+  display: flex;
+  left: 0;
+}
+
+.menu a {
+  padding: 5px;
+  text-decoration: none;
+  color: #fff;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
+}
+
+.menu h4 {
+  margin: 20px 0;
+}
+
+.menu p {
+  font-size: 14px;
+  margin: auto 0;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.menu a:hover {
+  background-color: #555;
+}
+
+.update__link {
+  margin: 10px 0;
+}
+
+@media (min-width: 720px) {
+  .general__burger {
+    display: none;
+  }
 }
