--- a/src/components/Pages/Pages.module.css
+++ b/src/components/Pages/Pages.module.css
@@ -8,6 +8,13 @@
   width: 100%;
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -15px;
+  row-gap: 20px;
+}
+
 .sidebar {
   width: 300px;
 }
@@ -129,5 +136,47 @@
 @media (max-width: 745px) {
   .secondClass {
     width: 100%;
+  }
+}
+
+@media (max-width: 720px) {
+  .sidebar {
+    display: none;
+  }
+  .secondClass {
+    width: 100%;
+  }
+  .aboutus__pages__photo {
+    width: 100%;
+  }
+  .aboutus__pages__photo img {
+    width: 100%;
+    height: 206px;
+  }
+  .abotus__pages__text {
+    width: 100%;
+  }
+  
+  .secondClass__video {
+    width: 100%;
+  }
+
+  .aboutus__pages__video {
+    width: 100%;
+  }
+  .aboutus__pages__video img{
+    width: 100%;
+    height: 206px;
+  }
+  .aboutus__pages__video__text {
+    width: 100%;
+  }
+  .row {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
+  .header__pages {
+    height: calc(100vh - 220px);
   }
 }
