--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -83,7 +83,8 @@
   display: flex;
   padding: 20px 34px;
   width: 100%;
-  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
   cursor: pointer;
   transition: all 0.3s ease 0s;
   height: 100%;
@@ -114,3 +115,9 @@
 .direct {
   color: #868383;
 }
+
+/* @media (max-width: 720px) {
+  .app {
+    display: none;
+  }
+} */
